<resources>
    <string name="app_name">Elderly Care</string>
    <string name="loginbutton">Login</string>
    <string name="registerbuttton">Register</string>
    <string name="emailval">Enter Your Email Address</string>
    <string name="newpassval">Enter Your New Password</string>
    <string name="appname">Elderly Care and Fall Detection</string>
    <string name="passval">Enter Password</string>
    <string name="signin">Sign In</string>
    <string name="donthaveaccount">Dont have a account ? Register here !</string>
    <string name="fullname">Enter Your full Name</string>
    <string name="phoneno">Enter your Phone Number</string>
    <string name="haveaccount">Already Registered? Sign In</string>
    <string name="loginmssg">You Have logged In Successfully</string>
</resources>